[package]
name = "todo"
version = "0.1.0"
authors = ["openalexa <openalexaio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
serde = "1.0.118"
serde_json = "1.0.61"
mongodb = "1.1.1"
config = "0.10"